<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apurva.ratatouille.FilterActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mexican"
        android:id="@+id/textView" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:id="@+id/switch1"
        android:layout_gravity="end"
        android:checked="true"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fastfood"
        android:id="@+id/textView2" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:id="@+id/switch2"
        android:layout_gravity="end"
        android:checked="true"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/icecream"
        android:id="@+id/textView3"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:id="@+id/switch3"
        android:layout_gravity="end"
        android:checked="true"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/coldtrucks"
        android:id="@+id/textView4" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:id="@+id/switch4"
        android:layout_gravity="end"
        android:checked="true"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/indian"
        android:id="@+id/textView5"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:id="@+id/switch5"
        android:layout_gravity="end"
        android:checked="true"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/others"
        android:id="@+id/textView6" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:id="@+id/switch6"
        android:layout_gravity="end"
        android:checked="true" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/radius"
        android:id="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/text_seek_bar"
        android:layout_gravity="end" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        />
</LinearLayout>
